--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
 body {
+  width:100%;
+  height:100%;
+  padding:0;
+  box-sizing: border-box;
+  text-align: center;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
